# drive16

./: .gitignore  DECISIONS.md  LICENSE  PROGRESS.md  README.md  WORKLOG.md  drive16-architecture.md  opencode.json
agent/: README.md
app/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: comfyui.rs  main.rs  ollama.rs  opencode.rs  phase4_prompt.rs  preflight.rs  project.rs  runtime.rs  starter_rom.rs  v1_prompt.rs
assets/: README.md
corpus/: README.md  sources.json
docs/: 2026-07-11-pipeline-hardening-handoff.md  2026-07-16-comprehensive-audit.md  2026-07-16-remediation-plan.md  2026-07-17-genesis-feel-gap.md  2026-07-17-handoff.md  2026-07-17-p1-plan.md  2026-07-17-p2-plan.md  app-control-hardening.md  app-navigation-hardening.md  genesis-feel-bar.md  overhaul-plan.md  phase0-evidence.md  phase0-validation.md  phase1-agent-loop.md  phase1-evidence.md  phase1-opencode.md  phase2-agent-loop.md  phase2-evidence.md  phase3-app-shell.md  phase3-evidence.md  phase3-framebuffer.md  phase3-model-settings.md  phase3-opencode-bridge.md  phase3-preflight.md  phase3-project-export.md  phase3-starter-rom.md  phase3-v1-prompt.md  phase4-comfyui-api-launch.md  phase4-comfyui-api-smoke.md  phase4-comfyui-checkpoint-install.md  phase4-comfyui-checkpoint-override.md  phase4-comfyui-checkpoint-source-audit.md  phase4-comfyui-endpoint.md  phase4-comfyui-mcp.md  phase4-comfyui-readiness.md  (+60 more)
(+176 files in other folders)
