[package]
name = "drive16"
version = "0.1.0"
description = "A conversational Sega Genesis game builder"
authors = ["Drive16 contributors"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
